# trac

./: .clineignore  .env.example  .gitignore  CHANGES  CITATION.cff  LICENSE  README.md  README_CREATE_STUDY.md  activities_default.json  activities_weekly.json  agents.md  dev.html  docker-compose.dev.mariadb.yml  docker-compose.dev.mssql.yml  docker-compose.dev.yml  index.html  pyproject.toml  run_dev_backend_minimal.sh  run_dev_nginx_both.bash  run_tests_docker.sh  run_tests_docker_integration.sh  studies_config.json  test_backend_integration.sh  test_backend_unit.sh  test_e2e.sh
.github/: agents.md  copilot-instructions.md
.github/skills/: backend.md  database.md  frontend.md  testing.md
.github/workflows/: backend_integration_tests.yml  backend_integration_tests_dbms_matrix_manual.yml  backend_tests.yml  backend_unit_tests.yml  backend_wheel_smoke_tests.yml  deploy_frontend_ghpages.yml  e2e_tests.yml  release_api_docs.yml
backend/: .env.example  CHANGES  activities_default.json  activities_default.sv.json  activities_ki_15yearolds_de.json  activities_ki_15yearolds_en.json  activities_ki_15yearolds_sv.json  activities_ki_9yearolds_de.json  activities_ki_9yearolds_en.json  activities_ki_9yearolds_sv.json  activities_ki_adults_de.json  activities_ki_adults_en.json  activities_ki_adults_sv.json  activities_mpiae_pilotadults_de.json  activities_weekly.json  pyproject.toml  studies_config.json
backend/alembic/: env.py
backend/alembic/versions/: 0001_initial_schema.py  0002_add_inactivity_timeout.py  0003_add_study_footer_links.py  0004_fix_description_column_type.py  0005_add_study_text_instructions.py  0006_add_study_name_unique.py
backend/scripts/: generate_release_api_docs.py
backend/src/o_timeusediary_backend/: api.py  cli.py  database.py  models.py  settings.py
backend/src/o_timeusediary_backend/api_deps/: available_activities.py
backend/src/o_timeusediary_backend/parsers/: activities_config.py  studies_config.py
backend/src/o_timeusediary_backend/templates/: admin_file_validation.html  admin_overview.html  admin_participant_management.html  admin_study_detail.html  admin_tools.html
backend/tests/integration/: conftest.py  test_activities_config_requires_participant.py  test_admin_export_import_roundtrip.py  test_admin_participant_management.py  test_admin_reseed_external_tasks.py  test_admin_study_collection_window.py  test_admin_study_import.py  test_admin_study_rename.py  test_api_basics.py  test_api_endpoint_structure.py  test_external_task_hmac_callback.py  test_external_task_launch_endpoint.py  test_min_coverage_validation.py  test_study_footer_links.py  test_study_text_instructions.py
backend/tests/unit/: test_admin_file_validation_creation.py  test_available_activities_db_only.py  test_cli.py  test_database_config_hydration.py  test_database_migrations.py  test_external_tasks_diary_requirement.py  test_import_study_payload_validation.py  test_startup_mode.py  test_studies_config.py  test_submit_frequency_validation.py  test_utils.py
database/: create_tud_db.sh  drop_tud_db.sh
deployment/: gunicorn_conf.py  timeusediary_backend.service.template
dev_tools/ci/backend_settings/: .env.ci
dev_tools/ci/frontend_settings/: tud_settings.ci.js
dev_tools/ci/webserver_config/: ci.nginx.conf
dev_tools/docker/: backend.Dockerfile
dev_tools/docker/backend_settings/: .env.dev-docker  .env.dev-docker.mariadb  .env.dev-docker.mssql
dev_tools/local_minimal/: README.md
dev_tools/local_minimal/backend_settings/: .env.dev-minimal
dev_tools/local_minimal/frontend_settings/: tud_settings.dev-minimal.js
dev_tools/local_nginx/: README.md
dev_tools/local_nginx/backend_settings/: .env.dev-nginx
dev_tools/local_nginx/frontend_settings/: tud_settings.dev-nginx.js
docs/: external-tasks-v2-spec.md
docs/agents/: backend.md  database.md  frontend.md  testing.md
frontend/: package-lock.json  package.json  playwright.config.js
frontend/src/: index.html
frontend/src/js/: ui.js  (+16 more)
js/: activities_config.js  attributeTracker.js  autoscroll.js  constants.js  debug-i18n.js  footer.js  globals.js  i18n.js  idle_timeout.js  script.js  study_config_manager.js  timeline.js  timeline_container.js  timeline_marker.js  ui.js  utils.js
locales/: de.json  en.json  es.json  fi.json  fr.json  pl.json  sv.json
pages/: consent.html  instructions.css  instructions.html  instructions.js  instructions_default.html  tasks.html  thank-you.html  thank-you_default.html  timeout.html
settings/: activities_default.json  activities_dev.json  activities_game.json  activities_mc.json  activities_orig.json  activities_usoc.json  studies_config.json  tud_settings.js
skills/backend/: SKILL.md
skills/database/: SKILL.md
skills/run-backend-integration-tests/: SKILL.md
skills/run-frontend-e2e-tests/: SKILL.md
skills/testing/: SKILL.md
src/o_timeusediary_backend/: activities_config.py  api.py  database.py  logging_config.py  models.py  settings.py  studies_config.py
styles/: animations.css  styles.css
(+65 files in other folders)
