[project]
name = "o-timeusediary-backend"
dynamic = ["version"] # see [tool.hatch.version] section below
description = "Backend for the o-timeusediary/TRAC web app for time use research."
authors = [
    {name = "Tim Schäfer", email = "ts+code@rcmd.org"},
]
classifiers = [
    "Intended Audience :: Science/Research",
    "Topic :: Scientific/Engineering",
    "Framework :: FastAPI",
    "Programming Language :: Python :: 3",
    "Natural Language :: English",
    "Natural Language :: German",
    "Natural Language :: French",
    "Natural Language :: Spanish",
    "Natural Language :: Swedish",
    "Topic :: Internet :: WWW/HTTP :: WSGI :: Application"
]
keywords = ["research", "computational-biology", "data-analysis"]


dependencies = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0", # Development server
    "pydantic>=2.0.0",
    "sqlmodel>=0.0.14",
    "psycopg2-binary>=2.9.0", # PostgreSQL driver
    "python-dotenv>=1.0.0", # For environment variable management
    "gunicorn>=23.0.0", # Production WSGI server
    "jinja2>=3.1.6",
    "pytest>=9.0.0",
]
requires-python = ">=3.11"

[project.optional-dependencies]
dev = [
    "pytest>=7.0.0",
    "black>=23.0.0",
    "isort>=5.12.0",
]

[tool.pytest.ini_options]
testpaths = ["tests/unit"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest-asyncio>=1.3.0",
    "watchdog>=4.0.0",
]

[tool.hatch.build.targets.wheel]
packages = ["src/o_timeusediary_backend"]

[tool.hatch.version]
path = "src/o_timeusediary_backend/__init__.py"  # reads __version__ variable from this file

[project.urls]
"Homepage" = "https://github.com/dfsp-spirit/trac"
"Repository" = "https://github.com/dfsp-spirit/trac.git"
"Bug Reports" = "https://github.com/dfsp-spirit/trac/issues"
"Documentation" = "https://github.com/dfsp-spirit/trac"
